--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2004-06-19  MenTaLguY  <mental@rydia.net>
+
+	* src/desktop.cpp, src/managed.h, src/rect-context.cpp,
+	  src/rect-context.h, src/selection.h, src/view.cpp:
+
+	  SPSelection now derives from Inkscape::Managed
+
 2004-06-19  Carl Hetherington  <inkscape@carlh.net>
 
 	* src/desktop-snap.{cpp,h}: sp_desktop_dim_snap_list returns
