--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 2004-06-20  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>
 
 	* src/config.h.win32: Define PACKAGE_TARNAME, for require-config.h.
+	  More accurate mathematical constants (20 decimal places instead of 3).
 
 2004-06-19  MenTaLguY  <mental@rydia.net>
 
