--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,20 @@
+2004-06-20  Ted Gould  <ted@gould.cx>
+
+	* share/extensions/ai_input.inkmod, share/extensions/ai_output.inkmod,
+	share/extensions/dia.inkmod, share/extensions/dropshadow.inkmod,
+	share/extensions/epsi_output.inkmod, share/extensions/roundhole.inkmod,
+	share/extensions/svgz_input.inkmod, share/extensions/svgz_output.inkmod,
+	share/extensions/txt2svg.inkmod, src/extension/extension.h,
+	src/extension/system.cpp, src/extension/implementation/script.cpp,
+	src/extension/internal/eps-out.cpp,
+	src/extension/internal/gdkpixbuf-input.cpp,
+	src/extension/internal/gnome.cpp, src/extension/internal/ps-out.cpp,
+	src/extension/internal/ps.cpp, src/extension/internal/svg.cpp,
+	src/extension/internal/win32.cpp:
+
+	Changing the the naming of the extensions to be more Java style naming to
+	allow for more extension in the future.
+
 2004-06-21  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>
 
 	* src/extension/internal/ps.cpp (PrintPS): Initialize _stream to
