--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-06-21  Carl Hetherington  <inkscape@carlh.net>
+
+	* src/desktop-snap.cpp: default to snapping to bounding boxes when
+	snapping is first enabled.
+
 2004-06-20  Ted Gould  <ted@gould.cx>
 
 	* share/extensions/ai_input.inkmod, share/extensions/ai_output.inkmod,
