--- a/ChangeLog
+++ b/ChangeLog
@@ -16,6 +16,8 @@
 	src/seltrans.cpp, src/sp-namedview.cpp, src/spiral-context.cpp,
 	src/star-context.cpp: Adapt for changes to snap code naming.
 
+	* src/seltrans.cpp: cleanups to sp_sel_trans_skew_request.
+
 2004-06-20  Ted Gould  <ted@gould.cx>
 
 	* share/extensions/ai_input.inkmod, share/extensions/ai_output.inkmod,
