--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-06-22  Carl Hetherington  <inkscape@carlh.net>
+
+	* src/file.cpp: fix another call to g_file_test with a
+	possibly-NULL parameter.  Fixes #977413.
+
 2004-06-21  Carl Hetherington  <inkscape@carlh.net>
 
 	* src/file.cpp: don't call g_file_test with a NULL path.  Fixes
