--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2004-06-22  John Cliff <simarilius@yahoo.com>
+
+	* src/object-edit.cpp: 	Added knots for manipulation of pattern fills.
+	* src/sp-shape.cpp, src/sp-shape.h: 	Added sp_shape_set_pattern to 
+	explictly set the transform rather than multiplying like adjust.
+
+
 2004-06-22  Carl Hetherington  <inkscape@carlh.net>
 
 	* src/sp-shape.cpp: add sp_shape_snappoints.
